--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "axios": "^0.16.1",
     "gsap": "^1.19.1",
+    "lodash": "^4.17.4",
     "nuxt": "^0.10.6",
     "nuxt-class-component": "^1.0.1",
-    "tachyons": "^4.7.0",
     "vue-class-component": "^5.0.1"
   },
   "scripts": {
@@ -16,6 +16,8 @@
     "generate": "nuxt generate"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.26.10",
+    "@types/lodash": "^4.14.63",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
