--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -t"
   },
   "devDependencies": {
     "@types/googlemaps": "^3.26.10",
